--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cool Design</title>
     <link rel="stylesheet" href="mainstyle.css">
     <link rel="icon" href="images/cool-01.png">
+
 </head>
 <body>
     <nav>
@@ -15,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="">หน้าหลัก</a></li>
                     <li><a href="">สินค้า/บริการ</a></li>
-                    <li><a href="">เกียวกับเรา</a></li>
+                    <li><a href="/2.html">การชำระเงิน</a></li>
                     <li><a href="">ติดต่อเรา</a></li>
 
                 </ul>
@@ -32,8 +33,8 @@
                 </div>
 
                 <div class="maincontent-img">
-                    <img src="images/-_L.png" alt="">
-                    <body style="background-image:url('https://cdn.discordapp.com/attachments/1094275872959246366/1312423813270732820/0ff473bef3c05e44.png?ex=674c716c&is=674b1fec&hm=ee0209b5d9ff27125e44bf85d344d08f2f9e6a8e19007c3d8396fb1dfcabb57e&')">
+                    <img src="images/-_L.png" alt="ฉลองเปิดร้าน">
+                    <body style="background-image:url('images/หลีัง.png')">
                         ...
                     </body>
                 </div>
@@ -44,25 +45,25 @@
     <section class="content">
         <div class="conteainer">
             <div class="content-title">
-                <h3>แสดงรายการ</h3>
+                <h3> <marquee behavior="alternate">แสดงรายการ / ผลงาน </marquee> </h3>
             </div>
             <div class="content-con">
                 <div class="content-item">
                     <img src="images/ตัวอย่างแก้มตุ่ย03.png" alt="Ocean" width="250" height="250">
                     <h4>𝐶ℎ𝑖𝑏𝑖𝐾𝑎𝑒𝑚𝑇𝑢𝑦</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, omnis.</p>
+                    <p></p>
                     <a href="" class="">ดูรายการสินค้า</a>
                 </div>
                 <div class="content-item">
                     <img src="images/ตัวอย่างแก้มตุ่ย03.png" alt="Ocean" width="250" height="250">
                     <h4>𝐶ℎ𝑖𝑏𝑖𝐾𝑎𝑒𝑚𝑇𝑢𝑦</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, omnis.</p>
+                    <p></p>
                     <a href="" class="">ดูรายการสินค้า</a>
                 </div>
                 <div class="content-item">
                     <img src="images/ตัวอย่างแก้มตุ่ย03.png" alt="Ocean" width="250" height="250">
                     <h4>𝐶ℎ𝑖𝑏𝑖𝐾𝑎𝑒𝑚𝑇𝑢𝑦</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, omnis.</p>
+                    <p></p>
                     <a href="" class="">ดูรายการสินค้า</a>
                 </div>
             </div>
