--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/cool-01.png">
 
 </head>
-<body>
+<body> 
     <nav>
         <div class="container">
             <div class="nav-con">
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="">หน้าหลัก</a></li>
                     <li><a href="">สินค้า/บริการ</a></li>
-                    <li><a href="/2.html">การชำระเงิน</a></li>
+                    <li><a href="Payment.html">การชำระเงิน</a></li>
                     <li><a href="">ติดต่อเรา</a></li>
 
                 </ul>
