--- a/Payment.html
+++ b/Payment.html
@@ -5,13 +5,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-image: url(images/หลัง2.png);
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
-            color: white;
+            
+            color: #26484f;
             padding: 15px 0;
             text-align: center;
         }
@@ -53,7 +53,7 @@
             border-radius: 5px;
         }
         footer {
-            background-color: #333;
+            
             color: white;
             text-align: center;
             padding: 0.5px 1;
