--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-con">
                 <div class="logo"><a href="#"> <img src="images/cool-01.png" alt="Ocean" width="50" height="50"> </a></div>
                 <ul class="menu">
-                    <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a></li>
+                    <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> หน้าหลักนะ</a></li>
                     <li><a href="Chibi.html"><i class="fa fa-th-list" aria-hidden="true"></i> สินค้า/บริการ</a></li>
                     <li><a href="Payment.html"><i class="fa fa-credit-card-alt" aria-hidden="true"></i> การชำระเงิน</a></li>
                     <li><a href=""><i class="fa fa-info-circle" aria-hidden="true"></i> ราคา</a></li>
