--- a/example2.html
+++ b/example2.html
@@ -113,8 +113,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <div align="center">   
         <h2>ChibiKaemTuy</h2>
         </div>
-<p>In this example, we use CSS to create a modal (dialog box) that is hidden by default.</p>
-<p>We use JavaScript to trigger the modal and to display the current image inside the modal when it is clicked on. Also note that we use the value from the image's "alt" attribute as an image caption text inside the modal.</p>
+<p>ผลงานจิบิแก้มตุ่ยทุกผลงานลูกค้าสามารถดูได้เลย</p>
+<p>ผลงานในนี้เป็นเพียงตัวอย่างเท่านั้นหากลูกค้าท่านใดสนใจสามารถติดต่อใน DC ได้เลย!.</p>
 
 <img id="myImg" src="images/ตัวอย่างแก้มตุ่ย03.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
 <img id="myImg2" src="images/ตัวอย่างแก้มตุ่ย.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
