--- a/example2.html
+++ b/example2.html
@@ -114,7 +114,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         <h2>ChibiKaemTuy</h2>
         </div>
 <p>ผลงานจิบิแก้มตุ่ยทุกผลงานลูกค้าสามารถดูได้เลย</p>
-<p>ผลงานในนี้เป็นเพียงตัวอย่างเท่านั้นหากลูกค้าท่านใดสนใจสามารถติดต่อใน DC ได้เลย!.</p>
+<p>ผลงานในนี้เป็นเพียงตัวอย่างเท่านั้นหากลูกค้าท่านใดสนใจสามารถติดต่อใน DC ได้เลย.</p>
 
 <img id="myImg" src="images/ตัวอย่างแก้มตุ่ย03.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
 <img id="myImg2" src="images/ตัวอย่างแก้มตุ่ย.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
