--- a/Payment.html
+++ b/Payment.html
@@ -78,6 +78,7 @@
             <p>การชำระเงิน </p>
             <ul>
                 <li>ชื่อบัญชี : นาย อติชาติ ศรีกุญชร</li>
+                <li>ธนาคาร : กสิกรไทย</li>
                 <li>เลขบัญชี : 135-2-88891-1</li>
                 <li>หรือเลือกแสกนได้ที่ QR code (ถ้าหากแสกนไม่ติด ให้ติดต่อกลับทันทีเพื่อการแก้ไข)</li>
                 <li>ดูให้ระเอียดก่อนโอนเงินทุกครัง</li>
