--- a/example.html
+++ b/example.html
@@ -109,15 +109,21 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body> 
   <body style="background-image:url('images/หลัง2.png')">
-
-    <div align="center">   
-        <h2>ChibiKaemTuy</h2>
-        <p>ผลงานจิบิส่วนหัวทุกผลงานลูกค้าสามารถดูได้เลย</p>
+    
+    <div class="content-menu2">
+      <div align="center">
+          <h2>menu</h2>
+          <p>ผลงานจิบิส่วนหัวทุกผลงานลูกค้าสามารถดูได้เลย</p>
         <p>ผลงานในนี้เป็นเพียงตัวอย่างเท่านั้นหากลูกค้าท่านใดสนใจสามารถติดต่อใน DC ได้เลย.</p>
+      </div>
+  
+        
         </div>
+    <div class="content-my">  
 <img id="myImg" src="images/newhead.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
-<img id="myImg2" src="images/รออัพ.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
+<img id="myImg2" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
 <img id="myImg3" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+</div>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
