--- a/example4.html
+++ b/example4.html
@@ -108,16 +108,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </style>
 </head>
 <body> 
-  <body style="background-image:url('images/หลัง.png')">
+  <body style="background-image:url('images/หลัง2.png')">
 
-    
-<h2>Image Modal</h2>
-<p>In this example, we use CSS to create a modal (dialog box) that is hidden by default.</p>
-<p>We use JavaScript to trigger the modal and to display the current image inside the modal when it is clicked on. Also note that we use the value from the image's "alt" attribute as an image caption text inside the modal.</p>
+    <div align="center">   
+        <h2>ChibiCarry</h2>
+        <p>ผลงานจิบิถูกหิ้วทุกผลงานลูกค้าสามารถดูได้เลย</p>
+        <p>ผลงานในนี้เป็นเพียงตัวอย่างเท่านั้นหากลูกค้าท่านใดสนใจสามารถติดต่อใน DC ได้เลย.</p>
+        </div>
 
-<img id="myImg" src="images/-_L.png" alt="Snow" style="width:100%;max-width:300px">
-<img id="myImg2" src="images/-_L.png" alt="Snow" style="width:100%;max-width:300px">
-<img id="myImg3" src="images/-_L.png" alt="Snow" style="width:100%;max-width:300px">
+<img id="myImg" src="images/ตัวอย่างหิ้ว01.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
+<img id="myImg2" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg3" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
