--- a/example.html
+++ b/example.html
@@ -109,6 +109,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body> 
   <body style="background-image:url('images/หลัง2.png')">
+    <audio id="background-music" autoplay loop>
+      <source src="เพลงบรรเลง.mp3" type="audio/mpeg">
+      </audio>
     
     <div class="content-menu2">
       <div align="center">
