--- a/Payment.html
+++ b/Payment.html
@@ -82,7 +82,7 @@
                 <li>เลขบัญชี : 135-2-88891-1</li>
                 <li>หรือเลือกแสกนได้ที่ QR code (ถ้าหากแสกนไม่ติด ให้ติดต่อกลับทันทีเพื่อการแก้ไข)</li>
                 <li>ดูให้ระเอียดก่อนโอนเงินทุกครัง</li>
-                <li>โอนเงิน = จองคิว </li>
+                <li>โอนมัดจำ = จองคิว </li>
                 <li>หลังจากชำระเงินเรียบร้อยแล้ว ส่งสลิปใน Ticket ของตัวเองทุกครั้ง เพื่อเป็นการยืนยันคิวของตัวเองนะครับบ!!</li>
             </ul>
         </div>
