--- a/Chibi.html
+++ b/Chibi.html
@@ -16,7 +16,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #ffa43d;
+  background-color: #abd2ff90;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -26,13 +26,13 @@ body {
   padding: 20px 20px 20px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181#ffa43d;
+  color: #ffffff;
   display: block;
   transition: 0.3s;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #ffcd8d;
 }
 
 .sidenav .closebtn {
@@ -50,8 +50,7 @@ body {
 </style>
 </head>
 <body>
-  
-<div id="mySidenav" class="sidenav">
+ <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="example.html">ChibiHead</a>
   <a href="example2.html">ChibiKaemTuy</a>
@@ -60,7 +59,7 @@ body {
   <a href="example5.html">ChibiChristmas</a>
 </div>
 
-<div class="content-menu">
+<div class="content-menu1">
     <div align="center">
         <h2>menu</h2>
     </div>
