--- a/Payment.html
+++ b/Payment.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <title>แนะนำ</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>แนะนำ</title>
+<link rel="stylesheet" href="mainstyle.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="icon" href="images/COOL_-_1.png">
     <style>
         
         body {
@@ -65,7 +70,14 @@
     </style>
 </head>
 <body>
-
+<nav-menu>
+    <div class="content-item2">
+        <div class="nav-con2">
+        <p></p>
+        <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+    </div>
+    </div>
+</nav-menu>
 <header>
     <h1>การชำระเงิน</h1>
 </header>
