--- a/example2.html
+++ b/example2.html
@@ -192,7 +192,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <div class="content-my">  
 <img id="myImg" src="images/ตัวอย่างแก้มตุ่ย03.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
 <img id="myImg2" src="images/ตัวอย่างแก้มตุ่ย.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
-<img id="myImg3" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg3" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
 </div>
 
 
