--- a/example3.html
+++ b/example3.html
@@ -189,8 +189,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
     </div>
     <div class="content-my">
 <img id="myImg" src="images/ตัวอย่างครึ่งตัว01.png" alt="ตัวอย่าง" style="width:100%;max-width:300px">
-<img id="myImg2" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
-<img id="myImg3" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg2" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg3" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
   </div>
 <!-- The Modal -->
 <div id="myModal" class="modal">
