--- a/example5.html
+++ b/example5.html
@@ -188,9 +188,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
         </div>
     </div>
     <div class="content-my">
-<img id="myImg" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
-<img id="myImg2" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
-<img id="myImg3" src="images/รออัพ.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg2" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
+<img id="myImg3" src="images/รออัพเดท.png" alt="รออัพเดท" style="width:100%;max-width:300px">
     </div>
 <!-- The Modal -->
 <div id="myModal" class="modal">
