--- a/Chibi.html
+++ b/Chibi.html
@@ -107,13 +107,13 @@ function closeNav() {
         <h3>ถ้าหากต้องการเพิ่ม (คนต่อไปเพิ่มคนละ +50)</h3>
         <p></p>
         <br>
-        <h3>ทุกรูปจะเป็นไฟล์ขนาด 2K </h3>
+        <h3>ChibFullbody (เต็มตัว) 150.-  </h3>
           <p></p> 
           <br> 
         <h3>สีพื้นหลังสามารถเลือกเองได้ : เช่น ขาว,ดำ,พื้นหลังใส,</h3>
         <p></p>
         <br>
-        <h3>ระยะเวลาทำงานและของคิวจะมีตามที่แจ้งไว้เลย(ห้ามเร่งทุกกรณ)</h3>
+        <h3>ระยะเวลาทำงานและของคิวจะมีตามที่แจ้งไว้เลย(ห้ามเร่งทุกกรณี)</h3>
         <p></p>
         <br>
         
