--- a/Payment.html
+++ b/Payment.html
@@ -74,7 +74,7 @@
     <div class="content-item2">
         <div class="nav-con2">
         <p></p>
-        <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+        <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
     </div>
     </div>
 </nav-menu>
