--- a/example2.html
+++ b/example2.html
@@ -157,7 +157,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body> 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+    <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
     <a href="example.html">ChibiHead</a>
     <a href="example2.html">ChibiKaemTuy</a>
     <a href="example3.html">ChibiHalfbody</a>
