--- a/Chibi.html
+++ b/Chibi.html
@@ -60,7 +60,7 @@ body {
 <body>
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+  <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
   
   
 </div>
