--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ body {
         <a href="example3.html">ChibiHalfbody</a>
         <a href="example4.html">ChibiCarry</a>
         <a href="example5.html">ChibiChristmas</a>
+        <a href="bag.html">กระเป๋าเก็บของ</a>
       </div>
       <script>
         function openNav() {
