--- a/Chibi.html
+++ b/Chibi.html
@@ -4,9 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="mainstyle.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 
 <style>
    body {
+    
   background-image: url('images/pic_ocean.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed; 
@@ -60,7 +62,7 @@ body {
 <body>
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+  <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
   
   
 </div>
@@ -72,7 +74,7 @@ body {
 
 <p> ราคาผลงานทุกผลงานราคาตามนี้และอาจจะเปลี่ยนแปลงได้</p>
 </div>
-<div class="content-open">
+ <div class="content-open">  
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </div>
 <script>
@@ -84,7 +86,7 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
-</div>
+</div> 
 <div class="content-price">
   <div align="center">
     <br>
