--- a/Payment.html
+++ b/Payment.html
@@ -7,10 +7,12 @@
 <link rel="stylesheet" href="mainstyle.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" href="images/COOL_-_1.png">
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <style>
         
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Itim", serif; /* ใช้ฟอนต์ Charm */
+
             background-image: url(images/หลัง2.png);
             margin: 0;
             padding: 0;
@@ -74,7 +76,7 @@
     <div class="content-item2">
         <div class="nav-con2">
         <p></p>
-        <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+        <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
     </div>
     </div>
 </nav-menu>
