--- a/example3.html
+++ b/example3.html
@@ -6,9 +6,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="mainstyle.css">
 <link rel="icon" href="images/COOL_-_1.png">
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 <style>
   body {
-  font-family: "Lato", sans-serif;
+    font-family: "Itim", serif; /* ใช้ฟอนต์ Charm */
 }
 
 .sidenav {
@@ -51,7 +52,7 @@
 }
 /* ปิดopen*/
 
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: "Itim", serif;}
 
 #myImg {
   border-radius: 5px;
@@ -157,7 +158,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body> 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
+    <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a>
     <a href="example.html">ChibiHead</a>
     <a href="example2.html">ChibiKaemTuy</a>
     <a href="example3.html">ChibiHalfbody</a>
