--- a/Payment.html
+++ b/Payment.html
@@ -13,7 +13,7 @@
         body {
             font-family: "Itim", serif; /* ใช้ฟอนต์ Charm */
 
-            background-image: url(images/หลัง2.png);
+            background-image:url('images/หลังปีใหม่2.png');
             margin: 0;
             padding: 0;
         }
