--- a/bag.html
+++ b/bag.html
@@ -11,12 +11,12 @@
       font-family: "Itim", serif; /* ใช้ฟอนต์ Charm */ 
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #ffffff, #6db9ff);
+      background-image:url('images/หลังปีใหม่2.png');
     }
 
     .header {
       width: 100%;
-      background-color: #71b3ff;
+      background-color: #ffffff38;
       color: white;
       padding: 20px;
       text-align: center;
@@ -29,9 +29,9 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      background-color: #ffffff90;
-      color: #5c6bc0;
-      border: 1px solid #71b3ff;
+      background-color: #04501790;
+      color: #ffffff;
+      border: 1px solid #04501790;
       padding: 8px 15px;
       font-size: 1em;
       border-radius: 20px;
