--- a/example4.html
+++ b/example4.html
@@ -178,7 +178,7 @@ body {font-family: "Itim", serif;}
     }
   </script>
 </div>
-  <body style="background-image:url('images/หลัง2.png')">
+<body style="background-image:url('images/หลังปีใหม่2.png')">
 
     <div class="content-menu4">
     <div align="center">   
