--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles1.css">
     <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="time.css">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/COOL_-_1.png">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
@@ -71,7 +70,10 @@ body {
 
 
 </head>
-<body style="background-image:url('images/หลัง2.png');">
+<body style="background-image:url('images/หลังปีใหม่2.png'); background-size: 100% 93%; background-position: -1px -176px;">
+
+
+
    
    <!-- เมนูด้านข้าง -->
     <div id="mySidenav" class="sidenav">
@@ -101,7 +103,7 @@ body {
                     <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> หน้าหลัก</a></li>
                     <li><span style="cursor:pointer" onclick="openNav()"><i class="fa fa-th-list"></i> สินค้า/บริการ </span></li>
                     <li><a href="Payment.html"><i class="fa fa-credit-card-alt" aria-hidden="true"></i> การชำระเงิน</a></li>
-                    <li><a href="Chibi.html"><i class="fa fa-info-circle" aria-hidden="true" ></i> ราคา</a></li>
+                    <li><a href="product.html"><i class="fa fa-info-circle" aria-hidden="true" ></i> ราคา</a></li>
                 </ul>
             </div>
         </div>
